# CQL

./: CMakeLists.txt
src/: datatypes.h  main.c  main.h
src/metacommand/: metacommand.c  metacommand.h
src/runner/: runner.c  runner.h
src/statements/: parser.c  parser.h  stmt.h  token.h  token_type.h  tokenizer.c  tokenizer.h
test/: CMakeLists.txt
test/src/: parser.cpp  tokenizer.cpp
